# TourmalineCore.TestChallenge.CPPTemplate

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
includes/: bowlingGame.h  example.h  helpForTest.h
sources/: bowlingGame.cpp  example.cpp  helpForTest.cpp
tests/: CMakeLists.txt  bowlingTest.cpp  example_test.cpp  run_unit_tests.cpp
